<resources>
    <string name="app_name">El Retén Retenes</string>
    <string name="retenes">Retenes</string>
    <string name="buscar_ret_n">Buscar retén</string>
    <string name="title_activity_fragment_counter">FragmentCounter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="agregar_ret_n">Agregar retén</string>
    <string name="cargando">Cargando</string>
    <string name="men_de_opciones">Menú de opciones</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="vender">Salida</string>
    <string name="cantidad">Cantidad</string>
    <string name="cup">cup</string>
    <string name="unidades">unidades</string>
    <string name="cancelar">CANCELAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="c_digo">Código</string>
    <string name="localizaci_n">Localización</string>
    <string name="marca">Marca</string>
    <string name="precio_de_compra">Precio de compra</string>
    <string name="tama_o">Tamaño</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="d_ficit">Déficit</string>
    <string name="descripci_n">Descripción</string>
    <string name="este_campo_no_debe_vacio">Este campo no debe estar vacío</string>
    <string name="elemento_repetido">Elemento repetido</string>
    <string name="elemento_repetido_desc">No pueden existir dos productos con el mismo código</string>
    <string name="operacion_realizada_con_exito">Operación realizada con éxito</string>
    <string name="localizacion">Localización</string>
    <string name="medida">Medida:</string>
    <string name="cantidad1">Cantidad:</string>
    <string name="no_definido">No definido</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="tama_o1">Tamaño:</string>
    <string name="modificar_cantidad">Modificar cantidad</string>
    <string name="restar">restar</string>
    <string name="sumar">sumar</string>
    <string name="medida1">Medida</string>
    <string name="entrada">Entrada</string>
    <string name="a_adir_entrada">Añadir entrada</string>
    <string name="transferir">Transferir</string>
    <string name="no_puede_transferir_esa_cantidad">No puede transferir esa cantidad</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="sobre_desarrolladores">Sobre desarrolladores</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="contrase_a_incorrecta">Contraseña incorrecta</string>
    <string name="salir">Salir</string>
    <string name="desea_salir_de_la_aplicaci_n">¿Desea salir de la aplicación?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="el_ret_n_retenes">El Retén Retenes</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="aceptar1">Aceptar</string>
    <string name="opciones_de_base_de_datos">Opciones de Base de Datos</string>
    <string name="exportar_base_de_datos">Exportar Base de Datos</string>
    <string name="importar_base_de_datos">Importar Base de Datos</string>
    <string name="base_de_datos_exportada_con_xito">Base de datos exportada con éxito</string>
    <string name="error_al_exportar_la_base_de_datos">Error al exportar la base de datos</string>
    <string name="error_al_importar_la_base_de_datos">Error al importar la base de datos</string>
    <string name="no_coinciden_la_contrase_a_a_confirmar_y_la_nueva">No coinciden la contraseña a confirmar y la nueva</string>
    <string name="importado_con_xito">Importado con éxito</string>
    <string name="Debe_reiniciar">Debe cerrar completamente la aplicación y luego abrirla para ver los cambios y evitar errores</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="el_ret_n">El Retén</string>
    <string name="negocio_particular">Negocio particular</string>
    <string name="_53_58419241">+53 58419241</string>
    <string name="direccion_negocio">Calzada de Luyanó, municipio 10 de Octubre, #727, e/ Concha y Porvenir, La Habana</string>
    <string name="sobre_nosotros1">Sobre nosotros:</string>
    <string name="sobre_nosotros_desc">"Tenga una cordial bienvenida a El Retén, tu tienda de confianza para encontrar las mejores piezas del mercado. Nos especializamos en ofrecer una amplia selección de piezas de alta calidad para todo tipo de motores. En El Retén, nuestra misión es brindar a nuestros clientes un servicio excepcional y un conocimiento experto en dicha industria"</string>
    <string name="qnecesitas">QNecesitas</string>
    <string name="productos_inform_ticos">Productos Informáticos</string>
    <string name="Nuestro_numero">+53 55759386</string>
    <string name="ronnynordelo_gmail_com">ronnynordelo@gmail.com</string>
    <string name="mision_nuestra">El enfoque que buscamos es el de una empresa acogedora, cuyos complicados servicios sean llevados a los clientes de forma fácil de comprender. Cuba es un país poco informatizado por lo que tenemos noción de que la mayoría de nuestros clientes conocen la importancia de llevar su negocio a las redes y la tecnología pero sus conocimientos de aplicaciones y páginas web son pocos o ninguno, así que si ese es su caso no se preocupe, solo tiene que decirnos alguna idea que tenga o la información que quiere informatizar y haremos magia.</string>
    <string name="qnecesitas_nat_cu">qnecesitas.nat.cu</string>
    <string name="https_www_facebook_com_qnecesitas_paginaprincipal">https://www.facebook.com/qnecesitas.paginaprincipal</string>
    <string name="misi_n">Misión:</string>
    <string name="revise_su_conexi_n_a_internet_e_intente_de_nuevo">Revise su conexión a Internet e intente de nuevo</string>
    <string name="reintentar">Reintentar</string>
    <string name="productos_m_s_vendidos">Productos más vendidos :</string>
    <string name="buscar">Buscar</string>
    <string name="ventas">Ventas :</string>
    <string name="d_a">día :</string>
    <string name="escoger">Escoger</string>
    <string name="mes">mes :</string>
    <string name="a_o">año :</string>
    <string name="ganancias">Ganancias :</string>
    <string name="seleccione_el_a_o_que_desea_filtrar">Seleccione el año que desea filtrar:</string>
    <string name="a_o1">Año</string>
    <string name="seleccione_el_mes_por_el_que_desea_filtrar">Seleccione el mes por el que desea filtrar:</string>
    <string name="mes1">Mes</string>
    <string name="seleccione_el_d_a_por_el_que_desea_filtrar">Seleccione el día por el que desea filtrar</string>
    <string name="d_a1">Día</string>
    <string name="No_hay_productos">No hay productos aún</string>
    <string name="No_hay_ventas">No hay ventas aún</string>
    <string name="Codigo_Info">Código: %s</string>
    <string name="nombre"><b>Nombre:</b> %s</string>
    <string name="ventas_cant">Ventas: %d</string>
    <string name="no_hay_valores">No hay valores para mostrar aún</string>
    <string name="m_s_vendidos_en_la_semana">Más vendidos en la semana:</string>
    <string name="selecciona_la_fecha">Selecciona la fecha</string>
    <string name="localizaci_n1">Localización:</string>
    <string name="precio_de_venta1">Precio de venta:</string>
    <string name="este_campo_no_cumple_los_requisitos_establecidos">Este campo no cumple los requisitos establecidos</string>
    <string name="men">Menú</string>
    <string name="retenes1">Retenes</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="d_ficit1">Déficit</string>
    <string name="entrada1">ENTRADA</string>

</resources>