<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TV header-->
            <TextView
                android:textStyle="bold"
                android:id="@+id/il_tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccione_el_a_o_que_desea_filtrar"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="20sp"/>

            <!--LL Timer-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_o1"
                    android:textSize="16sp"
                    android:layout_marginEnd="5sp"/>

                <NumberPicker
                    android:id="@+id/il_np_anno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Button Delete-->
                <Button
                    style="@style/transparent_button_outlined"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="20dp"/>

                <!--Button Accept-->
                <Button
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/btn_acept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="10sp"
                    android:layout_marginEnd="20dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>