<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:translationZ="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">

        <!--Cl Container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--cv_image-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:translationZ="4dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--IV Picture Car-->
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="?attr/colorPrimary"
                    android:importantForAccessibility="no"
                    android:src="@drawable/baseline_image_search_24"
                    app:tint="?attr/colorOnPrimary" />


            </androidx.cardview.widget.CardView>
            <!--Cl Container InfoDriver-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_image"
                app:layout_constraintTop_toTopOf="parent">

                <!--Tv NameS-->
                <TextView
                    android:id="@+id/tvSizeS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/medida"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--Tv Name-->
                <TextView
                    android:id="@+id/tvSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/cargando"
                    app:layout_constraintStart_toEndOf="@id/tvSizeS"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--Tv PhoneS-->
                <TextView
                    android:id="@+id/tvAmountS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/cantidad1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tvSizeS"
                    app:layout_constraintTop_toBottomOf="@id/tvLocationS" />

                <!--Tv Phone-->
                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/cargando"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/tvAmountS"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation" />

                <!--Tv Location-->
                <TextView
                    android:id="@+id/tvLocationS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/localizaci_n1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tvSizeS"
                    app:layout_constraintTop_toBottomOf="@id/tvSizeS" />

                <!--Tv Location-->
                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/cargando"
                    app:layout_constraintStart_toEndOf="@id/tvLocationS"
                    app:layout_constraintTop_toBottomOf="@id/tvSize" />

                <TextView
                    android:id="@+id/tvEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/entrada1"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAmountS"></TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>