<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".ActivityMenu">

    <!--Toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarIcons"
            app:title="@string/men"
            app:titleTextColor="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconSetting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/baseline_settings_24"
                android:visibility="visible"
                app:tint="?attr/colorOnPrimary" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--CL for header (image and text)-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/backg_menu_salesperson_mobile"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/black_transp_backg"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--CL for options-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp">

                <!--Card View Store-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_store"
                    android:layout_width="0sp"
                    android:layout_height="200dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="6dp"
                    app:layout_constraintEnd_toStartOf="@id/cv_product"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="40dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/ic_inventory_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/retenes1"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!--Card View products-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_product"
                    android:layout_width="0sp"
                    android:layout_height="200dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_store"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="40dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/baseline_query_stats_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/estad_sticas"
                            android:textSize="16sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <!--Card View Order-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_Counter"
                    android:layout_width="0sp"
                    android:layout_height="150dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_store">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="25dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/baseline_apps_outage_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/d_ficit1"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>